Mon Jun 20 18:10:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/examples/Display/NavDisplayGUI_exec/DetailView_moc.cpp:
        * DAnCE/examples/Display/NavDisplayGUI_exec/MapView_moc.cpp:
        * DAnCE/examples/Display/NavDisplayGUI_exec/NodeItem_moc.cpp:
        * DAnCE/examples/Display/NavDisplayGUI_exec/RootPanel_moc.cpp:
          Removed these files, these are generated and shouldn't be in the
          archive

Mon Jun 20 09:29:00 2005  Gary Maxey <gary.maxey@hp.com>

        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp
        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.h
          Add visitor for valuebox support.

Sun Jun 19 20:18:50 2005  Ming Xiong  <mxiong@tango.dre.vanderbilt.edu>

        * NEWS:

          Updated NEWS on upcoming support for Component Packaging

Thu Jun 16 21:46:10 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

        * DAnCE/examples/Display/descriptors/Modified_Deployment.xsd
        * DAnCE/examples/Quoter/descriptors/Modified_Deployment.xsd
        * docs/schema/Modified_Deployment.xsd

          Modified the <InstanceDeploymentDescription> element type
          to allow having unbounded number of <configProperty> elements.
          Thanks Will Chai <willchai@126.com> to report this problem.

Wed Jun 15 14:46:00 2005  Gautam Thaker  <gthaker@atl.lmco.com>

        * DAnCE/examples/Hello/step-by-step.html:

          Fixed a typo regarding name of script "run_NodeDaemons.pl" and
          one other sentence fragement.

Mon Jun 13 13:44:41 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * DAnCE/tests/NodeApplicationTest/run_test_simple.pl:
        * DAnCE/tests/NodeApplicationTest/run_test.pl:
        * DAnCE/tests/NodeApplicationTest/run_test_ex.pl:

          Fixed a typo.

Thu Jun  4 14:36:00 UTC 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>

        * DAnCE/examples/Quoter/Distributor/Distributor_exec.h
        * DAnCE/examples/Quoter/Distributor/Distributor_exec.cpp
